# anki_card_creator_skill

./: .gitignore  CLAUDE.md  README.md  deck-spec.md  install.sh
.claude/: settings.local.json
docs/: contributing.md  install-prompts.md  project-structure.md
docs/superpowers/plans/: 2026-03-26-anki-card-creator-implementation.md  2026-03-26-anki-card-layout-redesign-implementation.md  2026-03-26-anki-card-routing-fallback-implementation.md  2026-03-26-anki-card-vendored-dependencies-implementation.md  2026-03-26-anki-card-vendored-runtime-implementation.md  2026-03-27-anki-card-bilingual-defaults-implementation.md  2026-03-27-finance-middle-office-deck-enrichment-implementation.md  2026-03-29-cross-agent-installer-implementation.md
docs/superpowers/specs/: 2026-03-26-anki-card-creator-design.md  2026-03-26-anki-card-layout-redesign.md  2026-03-26-anki-card-routing-fallback.md  2026-03-26-anki-card-vendored-dependencies.md  (+4 more)
mcp/: README.md  pyproject.toml
mcp/src/anki_card_creator_mcp/: apkg_builder.py  card_models.py  card_styles.py  cli.py  markdown_parser.py  models.py  server.py  service.py  validators.py
mcp/tests/: test_apkg_builder.py  test_card_models.py  test_cli.py  test_e2e.py  test_install_sh.py  test_install_skill.py  test_markdown_parser.py  test_package_smoke.py  test_pyproject_metadata.py  test_service.py  test_service_json.py  test_validators.py
mcp/tests/fixtures/: minimal_deck_spec.md  qa_deck_spec.md
scripts/: install_skill.py
skill/anki-card-creator/: SKILL.md
tests/: conftest.py  test_apkg_builder.py  test_card_models.py  test_cli.py  test_e2e.py  test_install_sh.py  test_install_skill.py  test_markdown_parser.py  test_service.py  test_service_json.py  test_validators.py
tests/fixtures/: minimal_deck_spec.md  qa_deck_spec.md
(+11 files in other folders)
