[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-card-creator-mcp"
version = "0.1.0"
description = "MCP server for generating Anki apkg files from markdown specs"
requires-python = ">=3.11"
dependencies = [
  "genanki",
  "mcp",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
